# paper_daily

./: .coverage  CLAUDE.md  LICENSE  README.md  README_ZH.md  main.py  pyproject.toml
config/: config.yaml  test_vision.yaml
data/summaries/: 2603.08706_Agentic_Critical_Training.md
docs/: prd.md  prompts.md
docs/plans/: 2025-03-11-pdffigures2-implementation.md  2025-03-11-pdffigures2-integration-design.md  2026-03-10-autopipeline-mvp-design.md  2026-03-10-autopipeline-mvp-implementation.md  2026-03-10-image-extraction-analysis-plan.md  2026-03-10-paper-image-analysis-design.md  2026-03-10-prd-optimization-design.md  2026-03-10-prd-optimization.md
prompts/: image_analysis.md  step1_screening_zh.md  step2_quick_zh.md  step3_deep_zh.md  step4_experiments_zh.md  summary_template.md  summary_zh.md
scripts/: download_pdffigures2.sh
src/: __init__.py  config.py  downloader.py  extractor_factory.py  fetcher.py  image_analyzer.py  image_extractor.py  models.py  parser.py  pdffigures_extractor.py  renderer.py  runner.py  state_manager.py  summarizer.py
src/paper_daily.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
state/: paper_state.json
tests/fixtures/: sample_arxiv_response.json
tests/integration/: test_image_pipeline.py  test_pdffigures_integration.py  test_pipeline.py
tests/unit/: test_config.py  test_downloader.py  test_extractor_factory.py  test_fetcher.py  test_image_analyzer.py  test_image_extractor.py  test_image_models.py  test_models.py  test_parser.py  test_pdffigures_extractor.py  test_renderer.py  (+4 more)
