[project]
name = "paper-daily"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.0.0",
    "httpx>=0.27.0",
    "pypdf>=3.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "openai>=1.0.0",
    "typer>=0.12.0",
    "pymupdf>=1.24.0",
    "pillow>=10.0.0",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.8.0",
    "mypy>=1.8.0",
]

[project.scripts]
paper-daily = "main:main"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
